--- a/Depo/Depo/App/Resources/ar.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ar.lproj/OurLocalizable.strings
@@ -1519,103 +1519,104 @@
 "removed_from_album_success" = "تم إزالة العنصر(العناصر) بنجاح.";
 "Already have an account?" = "هل لديك حساب بالفعل؟";
 "already_have_account_title" = "هل لديك حساب بالفعل؟";
-"contact_phase2_delete_duplicates_title" = "";
-"contact_phase2_delete_duplicates_top_label" = "";
-"contact_phase2_delete_duplicates_delete_all" = "";
-"contact_phase2_delete_duplicates_count" = "";
-"contact_phase2_delete_duplicates_confirm_title" = "";
-"contact_phase2_delete_duplicates_confirm_message" = "";
-"contact_phase2_delete_duplicates_success_title" = "";
-"contact_phase2_delete_duplicates_success_message" = "";
-"contact_phase2_delete_duplicates_back_up_title" = "";
-"contact_phase2_delete_duplicates_back_up_message" = "";
-"contact_phase2_delete_duplicates_back_up_button" = "";
-"contact_phase2_delete_duplicates_progress_title" = "";
-"contact_phase2_delete_duplicates_progress_message" = "";
-"contact_phase2_back_up_contacts_confirm_title" = "";
-"contact_phase2_back_up_contacts_confirm_message" = "";
-"contact_phase2_contact_list_navbar_title" = "";
-"contact_phase2_contact_list_title" = "";
-"contact_phase2_contact_list_info" = "";
-"contact_phase2_contact_list_restore" = "";
-"contact_phase2_contact_list_delete_all" = "";
-"contact_phase2_restore_contacts_confirm_title" = "";
-"contact_phase2_restore_contacts_confirm_message" = "";
-"contact_phase2_restore_contacts_progress_title" = "";
-"contact_phase2_restore_contacts_progress_message" = "";
-"contact_phase2_restore_contacts_success_title" = "";
-"contact_phase2_restore_contacts_success_message" = "";
-"contact_phase2_delete_contacts_confirm_title" = "";
-"contact_phase2_delete_contacts_confirm_message" = "";
-"contact_phase2_delete_all_contacts_success_message" = "";
-"contact_phase2_delete_backup_success_message" = "";
-"contact_phase2_contact_detail_navbar_title" = "";
-"contact_phase2_contact_detail_section_phone" = "";
-"contact_phase2_contact_detail_section_email" = "";
-"contact_phase2_contact_detail_section_address" = "";
-"contact_phase2_contact_detail_section_birthday" = "";
-"contact_phase2_contact_detail_section_notes" = "";
-"contact_phase2_contact_detail_no_info" = "";
+"contact_phase2_delete_duplicates_title" = "امسح المتكرر";
+"contact_phase2_delete_duplicates_top_label" = "تم العثور على تسجيل متكرر %d بدليل الهاتف";
+"contact_phase2_delete_duplicates_delete_all" = "امسح الجميع";
+"contact_phase2_delete_duplicates_count" = "تسجيل متكرر%d";
+"contact_phase2_delete_duplicates_confirm_title" = "هل ترغب في مسح التسجيلات المتكررة؟";
+"contact_phase2_delete_duplicates_confirm_message" = "سوف يتم مسح التسجيلات المتكررة المتواجدة بدليل هاتفك, هل ترغب في مسح التسجيلات المتكررة من هاتفك؟";
+"contact_phase2_delete_duplicates_success_title" = "تم مسح تسجيلاتك المتكررة";
+"contact_phase2_delete_duplicates_success_message" = "تم مسح التسجيلات المتكررة بهاتفك بنجاح.";
+"contact_phase2_delete_duplicates_back_up_title" = "انسخ  جهات الاتصالات العائدة لك احتياطيا";
+"contact_phase2_delete_duplicates_back_up_message" = "قم بالنسخ الاحتياطي على الفور لدليل هاتفك الذي تم تحديثه بلايف بوكس lifebox!";
+"contact_phase2_delete_duplicates_back_up_button" = "قم بالنسخ الاحتياطي الان";
+"contact_phase2_delete_duplicates_progress_title" = "امسح التسجيلات المتكررة المتواجدة بهاتفك";
+"contact_phase2_delete_duplicates_progress_message" = "سوف يتم مسح التسجيلات المتكررة من هاتفك!";
+"contact_phase2_back_up_contacts_confirm_title" = "هل ترغب في أن يتم النسخ الاحتياطي لدليل هاتفك؟";
+"contact_phase2_back_up_contacts_confirm_message" = "لديك بالفعل نسخة احتياطية جاهزة.هل ترغب في الكتابة على النسخة المتواجدة حاليا ؟";
+"contact_phase2_contact_list_navbar_title" = "قائمة جهات الاتصال";
+"contact_phase2_contact_list_title" = "قائمة جهات الاتصال";
+"contact_phase2_contact_list_info" = "تم القيام بالنسخ الاحتياطي ل%1$d تسجيل بالنسخة الاحتياطية الخاصة بك لدليل الهاتف ذات التاريخ %2$@.";
+"contact_phase2_contact_list_restore" = "انقلها إلى الهاتف";
+"contact_phase2_contact_list_delete_all" = "امسح الجميع";
+"contact_phase2_restore_contacts_confirm_title" = "انقلها إلى الهاتف";
+"contact_phase2_restore_contacts_confirm_message" = "سوف يتم نقل  التسجيلات التي قمت بنسخها احتياطيا بلايف بوكسlifebox إلى دليل الهاتف.هل ترغب في الاستمرار؟";
+"contact_phase2_restore_contacts_progress_title" = "انقلها إلى الهاتف";
+"contact_phase2_restore_contacts_progress_message" = "سوف يتم نقل  التسجيلات التي قمت بنسخها احتياطيا بلايف بوكسlifebox إلى دليل الهاتف.";
+"contact_phase2_restore_contacts_success_title" = "تم اتمام عملية النقل إلى الهاتف";
+"contact_phase2_restore_contacts_success_message" = "تم نقل التسجيلات التي قمت بنسخها احتياطيا بأمان في لايف بوكسlifebox إلى هاتفكم بنجاح.";
+"contact_phase2_delete_contacts_confirm_title" = "هل ترغب في مسح نسختك الاحتياطية؟";
+"contact_phase2_delete_contacts_confirm_message" = "سوف يتم مسح التسجيلات من لايف بوكسlifebox التي قمت بنسخها احتياطيا.هل انت متأكد من أنك ترغب في الاستمرار؟";
+"contact_phase2_delete_all_contacts_success_message" = "تم مسح جميع التسجيلات التي قمت بنسخها احتياطيا.";
+"contact_phase2_delete_backup_success_message" = "تم مسح اخر ما قمت بنسخه احتياطيا.";
+"contact_phase2_contact_detail_navbar_title" = "بيانات جهة الاتصال";
+"contact_phase2_contact_detail_section_phone" = "رقم الهاتف";
+"contact_phase2_contact_detail_section_email" = "البريد الإلكتروني";
+"contact_phase2_contact_detail_section_address" = "العنوان";
+"contact_phase2_contact_detail_section_birthday" = "عيد الميلا";
+"contact_phase2_contact_detail_section_notes" = "الملاحظات";
+"contact_phase2_contact_detail_no_info" = "لا يوجد تسجيل قد تم نسخه احتياطيا";
 "Off" = "مغلق";
-"contact_phase2_backup_contacts_title" = "";
-"contact_phase2_backup_contacts_message" = "";
-"contact_phase2_backup_contacts_button" = "";
-"contact_phase2_small_card_backup_message" = "";
-"contact_phase2_small_card_backup_button" = "";
-"contact_phase2_small_card_duplicates_message" = "";
-"contact_phase2_small_card_duplicates_button" = "";
-"contact_phase2_big_card_backup_message" = "";
-"contact_phase2_big_card_contacts" = "";
-"contact_phase2_big_card_see_contacts_button" = "";
-"contact_phase2_big_card_autobackup_format" = "";
-"contact_phase2_backup_progress_title" = "";
-"contact_phase2_backup_progress_message" = "";
-"contact_phase2_cancel_analyze_button" = "";
-"contact_phase2_analyze_progress_message" = "";
-"contact_phase2_history_navbar_title" = "";
-"contact_phase2_history_header" = "";
-"contact_phase2_restore_button" = "";
-"contact_phase2_delete_button" = "";
-"contact_phase2_restore_popup_title" = "";
-"contact_phase2_delete_popup_title" = "";
-"contact_phase2_restore_popup_message" = "";
-"contact_phase2_delete_popup_message" = "";
-"contact_phase2_history_cell_title" = "";
-"contact_phase2_error_RemoteServer1101" = "";
-"contact_phase2_error_RemoteServer2000" = "";
-"contact_phase2_error_RemoteServer3000" = "";
-"contact_phase2_error_RemoteServer4000" = "";
-"contact_phase2_error_network" = "";
-"contact_phase2_delete_backup_success_card_title" = "";
-"contact_phase2_delete_backup_success_card_message" = "";
-"contact_phase2_contact_backup_success_navbar_title" = "";
-"contact_phase2_contact_backup_success_title" = "";
-"contact_phase2_contact_backup_success_message" = "";
-"contact_phase2_warning_popup_contact_permissions_title" = "";
-"contact_phase2_warning_popup_contact_permissions_message" = "";
-"contact_phase2_warning_popup_contact_permissions_storage_button" = "";
-"contact_phase2_warning_popup_contact_permissions_delete_button" = "";
-"contact_phase2_warning_popup_storage_limit_title" = "";
-"contact_phase2_warning_popup_storage_limit_message" = "";
-"contact_phase2_warning_popup_storage_limit_settings_button" = "";
-"contact_phase2_error_iternal" = "";
+"contact_phase2_backup_contacts_title" = "قم بالنسخ الاحتياطي لجهات الاتصال";
+"contact_phase2_backup_contacts_message" = "يكون دليل هاتفك ايضا في أمان بلايف بوكس lifebox!يمكنك الوصول إلى الأشخاص المتواجدين بدليل هاتفك من المكان ومن الجهاز الذي ترغب فيه.";
+"contact_phase2_backup_contacts_button" = "قم بالنسخ الاحتياطي الان";
+"contact_phase2_small_card_backup_message" = "تاريخ اخر تحديث لنسختك الاحتياطية";
+"contact_phase2_small_card_backup_button" = "شاهد النسخ الاحتياطية";
+"contact_phase2_small_card_duplicates_message" = "يمكنكم تنظيم دليل هاتفكم من خلال التخلص من التسجيلات المتكررة المتواجدة بهاتفكم.";
+"contact_phase2_small_card_duplicates_button" = "امسح التسجيلات المتكررة المتواجدة بهاتفك";
+"contact_phase2_big_card_backup_message" = "احتفظ بكل امان بالتسجيلات المتواجدة بدليل هاتفك بلايف بوكسlifebox!";
+"contact_phase2_big_card_contacts" = "جهات الاتصال";
+"contact_phase2_big_card_see_contacts_button" = "شاهد جهات الاتصال";
+"contact_phase2_big_card_autobackup_format" = "النسخ الاحتياطي التلقائي: %@";
+"contact_phase2_backup_progress_title" = "يتم النسخ الاحتياطي لجهات الاتصال";
+"contact_phase2_backup_progress_message" = "يكون دليل هاتفك ايضا في أمان بلايف بوكس lifebox!يمكنك الوصول إلى الأشخاص المتواجدين بدليل هاتفك من المكان ومن الجهاز الذي ترغب فيه.";
+"contact_phase2_cancel_analyze_button" = "قم بالإلغاء";
+"contact_phase2_analyze_progress_message" = "يتم تحليل دليل هاتفك";
+"contact_phase2_history_navbar_title" = "ما تم نسخه احتياطيا";
+"contact_phase2_history_header" = "اخر نسخك الاحتياطية";
+"contact_phase2_restore_button" = "انقلها للهاتف";
+"contact_phase2_delete_button" = "امسح";
+"contact_phase2_restore_popup_title" = "انقلها للهاتف";
+"contact_phase2_delete_popup_title" = "امسح ما تم نسخه احتياطيا";
+"contact_phase2_restore_popup_message" = "سوف يتم نقل التسجيلات التي قمت بنسخها احتياطيا بلايف بوكسlifebox إلى دليل هاتفك.هل ترغب في الاستمرار؟";
+"contact_phase2_delete_popup_message" = "سوف يتم مسح التسجيلات من لايف بوكسlifebox التي قمت بنسخها احتياطيا.هل انت متأكد من أنك ترغب في الاستمرار؟";
+"contact_phase2_history_cell_title" = "جهات الاتصال";
+"contact_phase2_error_RemoteServer1101" = "حدثخطأمؤقت.من فضلكحاولمرةاخرى.";
+"contact_phase2_error_RemoteServer2000" = "حدثخطأمؤقت.من فضلكحاولمرةاخرى.";
+"contact_phase2_error_RemoteServer3000" = "تعذر اتمام النسخ الاحتياطي بسبب تجاوزك للحد الأقصى لعدد الأشخاص الذي يمكنك نسخهم احتياطيا.";
+"contact_phase2_error_RemoteServer4000" = "حدثخطأمؤقت.من فضلكحاولمرةاخرى.";
+"contact_phase2_error_network" = "يبدو أن هناك مشكلة باتصال الانترنت.يمكنكم التحقق من الاتصال وإعادة المحاولة مرة أخرى.";
+"contact_phase2_delete_backup_success_card_title" = "النسخ الاحتياطي التلقائي";
+"contact_phase2_delete_backup_success_card_message" = "يمكنكتشغيلالنسخالاحتياطيالتلقائيلعملنسخةاحتياطيةمنالدليلتلقائيًاعلىفترات منتظمة.";
+"contact_phase2_contact_backup_success_navbar_title" = "قم بالنسخ الاحتياطي";
+"contact_phase2_contact_backup_success_title" = "اكتملالنسخالاحتياطي";
+"contact_phase2_contact_backup_success_message" = "مععدموجودتسجيلمjكرر, فقد تم النسخ الاحتياطي لتسجيل جديد لدليل الهاتف %d بأمان بلايف بوكسlifebox.";
+"contact_phase2_warning_popup_contact_permissions_title" = "إذن الوصول لجهات الاتصال";
+"contact_phase2_warning_popup_contact_permissions_message" = "حتى يمكنك القيام بالنسخ الاحتياطي لدليل هاتفك بلايف بوكس lifebox,فيجب عليك السماح للوصول لجهات اتصال لايف بوكسlifebox من إعدادات الهاتف.";
+"contact_phase2_warning_popup_contact_permissions_storage_button" = "الإعدادات";
+"contact_phase2_warning_popup_contact_permissions_delete_button" = "امسح المحتويات العائدة لي";
+"contact_phase2_warning_popup_storage_limit_title" = "مساحةتخزين lifebox ممتلئة بشكل تام";
+"contact_phase2_warning_popup_storage_limit_message" = "لا يمكنك الاستمرار بالعملية بسبب عدم وجود مكان فارغ بمساحة التخزين.يمكنك رفع مساحة التخزين أو يمكنك فتح مكان بمساحة التخزين من خلال مسح ملفاتك.";
+"contact_phase2_warning_popup_storage_limit_settings_button" = "ارفع من مساحة التخزين الخاصة بي";
+"contact_phase2_error_iternal" = "حدثخطأمؤقت.من فضلكحاولمرةاخرى.";
 "download_document_error_popup" = "يمكنك تنزيل الصور والفيديو أوالألبوم فقط.";
-"contact_phase2_history_cell_Contact_List" = "";
+"contact_phase2_history_cell_Contact_List" = "قائمة جهات الاتصال";
 "settings_action_sheet_account_details" = "";
-"contact_phase2_error_backup_title" = "";
-"contact_phase2_error_restore_title" = "";
-"contact_phase2_error_delete_title" = "";
+"contact_phase2_error_backup_title" = "لم يتم التمكن من القيام بالنسخ الاحتياطي!";
+"contact_phase2_error_restore_title" = "لم يتم التمكن من القيام بالنقل إلى الهاتف!";
+"contact_phase2_error_delete_title" = "لم يتم التمكن من القيام بعملية المسح!";
 "gallery_filter_all" = "";
 "gallery_filter_synced" = "";
 "gallery_filter_unsynced" = "";
 "gallery_filter_action_sheet_all" = "";
 "gallery_filter_action_sheet_synced" = "";
 "gallery_filter_action_sheet_unsynced" = "";
-"contact_phase2_error_quota_restore" = "";
-"contact_phase2_error_quota_backup" = "";
-"contact_phase2_error_message" = "";
-"contact_phase2_result_backup_nav_bar_title" = "";
-"contact_phase2_result_restore_nav_bar_title" = "";
-"contact_phase2_result_delete_backup_nav_bar_title" = "";
-"contact_phase2_result_delete_duplicates_nav_bar_title" = "";
-"contact_phase2_result_delete_all_contacts_nav_bar_title" = "";
+"contact_phase2_error_quota_restore" = "لا يمكنك الاستمرار بالعملية بسبب عدم تواجد مكان فارغ بمساحة التخزين.يمكنك رفع مساحة التخزين أو يمكنك فتح مكان بمساحة التخزين من خلال مسح ملفاتك.";
+"contact_phase2_error_quota_backup" = "لا يمكنك الاستمرار بالعملية بسبب عدم تواجد مكان فارغ بمساحة التخزين.يمكنك رفع مساحة التخزين أو يمكنك فتح مكان بمساحة التخزين من خلال مسح ملفاتك.";
+"contact_phase2_error_message" = "حدثخطأمؤقت.من فضلكحاولمرةاخرى.";
+"contact_phase2_result_backup_nav_bar_title" = "قم بالنسخ الاحتياطي";
+"contact_phase2_result_restore_nav_bar_title" = "انقلها إلى الهاتف";
+"contact_phase2_result_delete_backup_nav_bar_title" = "امسح النسخة الاحتياطية";
+"contact_phase2_result_delete_duplicates_nav_bar_title" = "امسح المتكرر";
+"contact_phase2_result_delete_all_contacts_nav_bar_title" = "امسح جهات الاتصال";
+"eula_title" = "";
