--- a/Depo/Depo/App/Resources/ru.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ru.lproj/OurLocalizable.strings
@@ -1521,103 +1521,104 @@
 "removed_from_album_success" = "Предмет(ы) были успешно удалены.";
 "Already have an account?" = "У вас уже есть аккаунт?";
 "already_have_account_title" = "У вас уже есть аккаунт?";
-"contact_phase2_delete_duplicates_title" = "";
-"contact_phase2_delete_duplicates_top_label" = "";
-"contact_phase2_delete_duplicates_delete_all" = "";
-"contact_phase2_delete_duplicates_count" = "";
-"contact_phase2_delete_duplicates_confirm_title" = "";
-"contact_phase2_delete_duplicates_confirm_message" = "";
-"contact_phase2_delete_duplicates_success_title" = "";
-"contact_phase2_delete_duplicates_success_message" = "";
-"contact_phase2_delete_duplicates_back_up_title" = "";
-"contact_phase2_delete_duplicates_back_up_message" = "";
-"contact_phase2_delete_duplicates_back_up_button" = "";
-"contact_phase2_delete_duplicates_progress_title" = "";
-"contact_phase2_delete_duplicates_progress_message" = "";
-"contact_phase2_back_up_contacts_confirm_title" = "";
-"contact_phase2_back_up_contacts_confirm_message" = "";
-"contact_phase2_contact_list_navbar_title" = "";
-"contact_phase2_contact_list_title" = "";
-"contact_phase2_contact_list_info" = "";
-"contact_phase2_contact_list_restore" = "";
-"contact_phase2_contact_list_delete_all" = "";
-"contact_phase2_restore_contacts_confirm_title" = "";
-"contact_phase2_restore_contacts_confirm_message" = "";
-"contact_phase2_restore_contacts_progress_title" = "";
-"contact_phase2_restore_contacts_progress_message" = "";
-"contact_phase2_restore_contacts_success_title" = "";
-"contact_phase2_restore_contacts_success_message" = "";
-"contact_phase2_delete_contacts_confirm_title" = "";
-"contact_phase2_delete_contacts_confirm_message" = "";
-"contact_phase2_delete_all_contacts_success_message" = "";
-"contact_phase2_delete_backup_success_message" = "";
-"contact_phase2_contact_detail_navbar_title" = "";
-"contact_phase2_contact_detail_section_phone" = "";
-"contact_phase2_contact_detail_section_email" = "";
-"contact_phase2_contact_detail_section_address" = "";
-"contact_phase2_contact_detail_section_birthday" = "";
-"contact_phase2_contact_detail_section_notes" = "";
-"contact_phase2_contact_detail_no_info" = "";
+"contact_phase2_delete_duplicates_title" = "Удалить дубликаты";
+"contact_phase2_delete_duplicates_top_label" = "В телефонной книге найдено %d дубликатов";
+"contact_phase2_delete_duplicates_delete_all" = "Удалить Все";
+"contact_phase2_delete_duplicates_count" = "%d Дубликатов";
+"contact_phase2_delete_duplicates_confirm_title" = "Удалить дубликаты?";
+"contact_phase2_delete_duplicates_confirm_message" = "Дубликаты в вашей телефонной книге будут удалены. Вы хотите удалить эти записи с вашего телефона?";
+"contact_phase2_delete_duplicates_success_title" = "Дубликаты были удалены";
+"contact_phase2_delete_duplicates_success_message" = "Дубликаты были успешно удалены с вашего телефона.";
+"contact_phase2_delete_duplicates_back_up_title" = "Сделать Резервную Копию Ваших Контактов";
+"contact_phase2_delete_duplicates_back_up_message" = "Сделайте резервную копию обновленной телефонной книги в lifebox прямо сейчас!";
+"contact_phase2_delete_duplicates_back_up_button" = "Сделать Резервное Копирование Сейчас";
+"contact_phase2_delete_duplicates_progress_title" = "Удалить Дубликаты с Вашего Телефона";
+"contact_phase2_delete_duplicates_progress_message" = "Дубликаты с вашего телефона будут удалены!";
+"contact_phase2_back_up_contacts_confirm_title" = "Сделать Резервное Копирование Вашей Телефонной Книги?";
+"contact_phase2_back_up_contacts_confirm_message" = "У вас уже есть резервная копия. Хотите перезаписать существующую?";
+"contact_phase2_contact_list_navbar_title" = "Список Контактов";
+"contact_phase2_contact_list_title" = "Список Контактов";
+"contact_phase2_contact_list_info" = "Записи %1$d были скопированы в резервную копию каталога с датой %2$@.";
+"contact_phase2_contact_list_restore" = "Перевести на Телефон";
+"contact_phase2_contact_list_delete_all" = "Удалить Все";
+"contact_phase2_restore_contacts_confirm_title" = "Перевести на Телефон";
+"contact_phase2_restore_contacts_confirm_message" = "Записи, которые были скопированы в lifebox, будут перенесены в телефонную книгу. Вы хотите продолжить?";
+"contact_phase2_restore_contacts_progress_title" = "Перевести на Телефон";
+"contact_phase2_restore_contacts_progress_message" = "Записи, скопированные вами в lifebox, переносятся в телефонную книгу";
+"contact_phase2_restore_contacts_success_title" = "Перевод на Телефон Завершен";
+"contact_phase2_restore_contacts_success_message" = "Записи, которые были скопированы и безопасно хранились в lifebox, были успешно переданы на ваш телефон.";
+"contact_phase2_delete_contacts_confirm_title" = "Вы хотите удалить резервную копию?";
+"contact_phase2_delete_contacts_confirm_message" = "Резервные копии, созданные вами, будут удалены из lifebox. Вы уверены что хотите продолжить?";
+"contact_phase2_delete_all_contacts_success_message" = "Все резервные копии, которые вы создали, были удалены.";
+"contact_phase2_delete_backup_success_message" = "Ваша последняя резервная копия была удалена.";
+"contact_phase2_contact_detail_navbar_title" = "Контактная Информация";
+"contact_phase2_contact_detail_section_phone" = "Телефонный номер";
+"contact_phase2_contact_detail_section_email" = "Адрес электронной почты";
+"contact_phase2_contact_detail_section_address" = "Адрес";
+"contact_phase2_contact_detail_section_birthday" = "День рождения";
+"contact_phase2_contact_detail_section_notes" = "Примечания";
+"contact_phase2_contact_detail_no_info" = "Нет резервных копий";
 "Off" = "Выключено";
-"contact_phase2_backup_contacts_title" = "";
-"contact_phase2_backup_contacts_message" = "";
-"contact_phase2_backup_contacts_button" = "";
-"contact_phase2_small_card_backup_message" = "";
-"contact_phase2_small_card_backup_button" = "";
-"contact_phase2_small_card_duplicates_message" = "";
-"contact_phase2_small_card_duplicates_button" = "";
-"contact_phase2_big_card_backup_message" = "";
-"contact_phase2_big_card_contacts" = "";
-"contact_phase2_big_card_see_contacts_button" = "";
-"contact_phase2_big_card_autobackup_format" = "";
-"contact_phase2_backup_progress_title" = "";
-"contact_phase2_backup_progress_message" = "";
-"contact_phase2_cancel_analyze_button" = "";
-"contact_phase2_analyze_progress_message" = "";
-"contact_phase2_history_navbar_title" = "";
-"contact_phase2_history_header" = "";
-"contact_phase2_restore_button" = "";
-"contact_phase2_delete_button" = "";
-"contact_phase2_restore_popup_title" = "";
-"contact_phase2_delete_popup_title" = "";
-"contact_phase2_restore_popup_message" = "";
-"contact_phase2_delete_popup_message" = "";
-"contact_phase2_history_cell_title" = "";
-"contact_phase2_error_RemoteServer1101" = "";
-"contact_phase2_error_RemoteServer2000" = "";
-"contact_phase2_error_RemoteServer3000" = "";
-"contact_phase2_error_RemoteServer4000" = "";
-"contact_phase2_error_network" = "";
-"contact_phase2_delete_backup_success_card_title" = "";
-"contact_phase2_delete_backup_success_card_message" = "";
-"contact_phase2_contact_backup_success_navbar_title" = "";
-"contact_phase2_contact_backup_success_title" = "";
-"contact_phase2_contact_backup_success_message" = "";
-"contact_phase2_warning_popup_contact_permissions_title" = "";
-"contact_phase2_warning_popup_contact_permissions_message" = "";
-"contact_phase2_warning_popup_contact_permissions_storage_button" = "";
-"contact_phase2_warning_popup_contact_permissions_delete_button" = "";
-"contact_phase2_warning_popup_storage_limit_title" = "";
-"contact_phase2_warning_popup_storage_limit_message" = "";
-"contact_phase2_warning_popup_storage_limit_settings_button" = "";
-"contact_phase2_error_iternal" = "";
+"contact_phase2_backup_contacts_title" = "Сделайте Резервную Копию Ваших Контактов";
+"contact_phase2_backup_contacts_message" = "Ваша телефонная книга также в безопасности в lifebox! Вы можете связаться с вашими контактами из любого места, с любого устройства.";
+"contact_phase2_backup_contacts_button" = "Сделать Резервное Копирование Сейчас";
+"contact_phase2_small_card_backup_message" = "Дата последнего обновления резервной копии";
+"contact_phase2_small_card_backup_button" = "Показать резервные копии";
+"contact_phase2_small_card_duplicates_message" = "Вы можете отредактировать свою телефонную книгу, удалив дубликаты записей на вашем телефоне.";
+"contact_phase2_small_card_duplicates_button" = "Удалить дубликаты с вашего телефона";
+"contact_phase2_big_card_backup_message" = "Храните в безопасности записи телефонной книги в lifebox!";
+"contact_phase2_big_card_contacts" = "Контакты";
+"contact_phase2_big_card_see_contacts_button" = "Показать Контакты";
+"contact_phase2_big_card_autobackup_format" = "Автоматическое Резервное Копирование: %@";
+"contact_phase2_backup_progress_title" = "Идет Резервное Копирование Контактов";
+"contact_phase2_backup_progress_message" = "Ваша телефонная книга также в безопасности в lifebox! Вы можете связаться с вашими контактами из любого места, с любого устройства.";
+"contact_phase2_cancel_analyze_button" = "Отмена";
+"contact_phase2_analyze_progress_message" = "Ваша телефонная книга анализируется";
+"contact_phase2_history_navbar_title" = "Резервное Копирование";
+"contact_phase2_history_header" = "Последние Резервные Копии";
+"contact_phase2_restore_button" = "Перевести на Телефон";
+"contact_phase2_delete_button" = "Удалить";
+"contact_phase2_restore_popup_title" = "Перевести на Телефон";
+"contact_phase2_delete_popup_title" = "Удалить Резервные Копии";
+"contact_phase2_restore_popup_message" = "Записи, которые вы скопировали в lifebox, будут перенесены в телефонную книгу. Хотите продолжить?";
+"contact_phase2_delete_popup_message" = "Резервные копии будут удалены из lifebox. Вы уверены, что хотите продолжить?";
+"contact_phase2_history_cell_title" = "Контакты";
+"contact_phase2_error_RemoteServer1101" = "Произошла временная ошибка. Пожалуйста, попробуйте еще раз.";
+"contact_phase2_error_RemoteServer2000" = "Произошла временная ошибка. Пожалуйста, попробуйте еще раз.";
+"contact_phase2_error_RemoteServer3000" = "Резервное копирование не может быть завершено, потому что вы превысили максимальный лимит контактов для резервного копирования.";
+"contact_phase2_error_RemoteServer4000" = "Произошла временная ошибка. Пожалуйста, попробуйте еще раз.";
+"contact_phase2_error_network" = "Похоже есть проблема с интернет-подключением. Вы можете проверить соединение и попробовать еще раз.";
+"contact_phase2_delete_backup_success_card_title" = "Автоматическое Резервное Копирование Телефонной Книги";
+"contact_phase2_delete_backup_success_card_message" = "Вы можете включить автоматическое резервное копирование для автоматического резервного копирования вашей телефонной книги на регулярной основе.";
+"contact_phase2_contact_backup_success_navbar_title" = "Копировать";
+"contact_phase2_contact_backup_success_title" = "Создание резервной копии завершено";
+"contact_phase2_contact_backup_success_message" = "%d новых записей телефонной книги были благополучно сохранены в ваш lifebox без повторяющихся записей (дубликатов).";
+"contact_phase2_warning_popup_contact_permissions_title" = "Разрешение на Доступ Контактам";
+"contact_phase2_warning_popup_contact_permissions_message" = "Чтобы иметь возможность выполнять резервное копирование телефонной книги в lifebox, вы должны разрешить доступ lifebox к контактам в настройках телефона.";
+"contact_phase2_warning_popup_contact_permissions_storage_button" = "Настройки";
+"contact_phase2_warning_popup_contact_permissions_delete_button" = "Удалить Мой Контент";
+"contact_phase2_warning_popup_storage_limit_title" = "Хранилище lifebox полностью заполнено";
+"contact_phase2_warning_popup_storage_limit_message" = "Вы не можете продолжить действие по причине недостатка свободного места в хранилище. Вы можете увеличить пространство для хранения или освободить место удалив файлы.";
+"contact_phase2_warning_popup_storage_limit_settings_button" = "Увеличить Пространство для Хранения";
+"contact_phase2_error_iternal" = "Произошла временная ошибка. Пожалуйста, попробуйте еще раз.";
 "download_document_error_popup" = "Вы можете загружать только фотографии, видео или альбомы.";
-"contact_phase2_history_cell_Contact_List" = "";
+"contact_phase2_history_cell_Contact_List" = "Список Контактов";
 "settings_action_sheet_account_details" = "";
-"contact_phase2_error_backup_title" = "";
-"contact_phase2_error_restore_title" = "";
-"contact_phase2_error_delete_title" = "";
+"contact_phase2_error_backup_title" = "Ошибка резервного копирования!";
+"contact_phase2_error_restore_title" = "Передача на телефон не удалась!";
+"contact_phase2_error_delete_title" = "Удаление не удалось!";
 "gallery_filter_all" = "";
 "gallery_filter_synced" = "";
 "gallery_filter_unsynced" = "";
 "gallery_filter_action_sheet_all" = "";
 "gallery_filter_action_sheet_synced" = "";
 "gallery_filter_action_sheet_unsynced" = "";
-"contact_phase2_error_quota_restore" = "";
-"contact_phase2_error_quota_backup" = "";
-"contact_phase2_error_message" = "";
-"contact_phase2_result_backup_nav_bar_title" = "";
-"contact_phase2_result_restore_nav_bar_title" = "";
-"contact_phase2_result_delete_backup_nav_bar_title" = "";
-"contact_phase2_result_delete_duplicates_nav_bar_title" = "";
-"contact_phase2_result_delete_all_contacts_nav_bar_title" = "";
+"contact_phase2_error_quota_restore" = "Вы не можете продолжить действие по причине недостатка свободного места в хранилище. Вы можете увеличить пространство для хранения или освободить место удалив файлы.";
+"contact_phase2_error_quota_backup" = "Вы не можете продолжить действие по причине недостатка свободного места в хранилище. Вы можете увеличить пространство для хранения или освободить место удалив файлы.";
+"contact_phase2_error_message" = "Произошла временная ошибка. Пожалуйста, попробуйте еще раз.";
+"contact_phase2_result_backup_nav_bar_title" = "Копировать";
+"contact_phase2_result_restore_nav_bar_title" = "Перевести на Телефон";
+"contact_phase2_result_delete_backup_nav_bar_title" = "Удалить Резервную Копию";
+"contact_phase2_result_delete_duplicates_nav_bar_title" = "Удалить Дубликаты";
+"contact_phase2_result_delete_all_contacts_nav_bar_title" = "Удалить Контакты";
+"eula_title" = "";
