--- a/Depo/Depo/App/Resources/sq.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/sq.lproj/OurLocalizable.strings
@@ -1550,103 +1550,104 @@
 "removed_from_album_success" = "Artikujt janë hequr me sukses.";
 "Already have an account?" = "Ke tashmë një llogari?";
 "already_have_account_title" = "Ke tashmë një llogari?";
-"contact_phase2_delete_duplicates_title" = "";
-"contact_phase2_delete_duplicates_top_label" = "";
-"contact_phase2_delete_duplicates_delete_all" = "";
-"contact_phase2_delete_duplicates_count" = "";
-"contact_phase2_delete_duplicates_confirm_title" = "";
-"contact_phase2_delete_duplicates_confirm_message" = "";
-"contact_phase2_delete_duplicates_success_title" = "";
-"contact_phase2_delete_duplicates_success_message" = "";
-"contact_phase2_delete_duplicates_back_up_title" = "";
-"contact_phase2_delete_duplicates_back_up_message" = "";
-"contact_phase2_delete_duplicates_back_up_button" = "";
-"contact_phase2_delete_duplicates_progress_title" = "";
-"contact_phase2_delete_duplicates_progress_message" = "";
-"contact_phase2_back_up_contacts_confirm_title" = "";
-"contact_phase2_back_up_contacts_confirm_message" = "";
-"contact_phase2_contact_list_navbar_title" = "";
-"contact_phase2_contact_list_title" = "";
-"contact_phase2_contact_list_info" = "";
-"contact_phase2_contact_list_restore" = "";
-"contact_phase2_contact_list_delete_all" = "";
-"contact_phase2_restore_contacts_confirm_title" = "";
-"contact_phase2_restore_contacts_confirm_message" = "";
-"contact_phase2_restore_contacts_progress_title" = "";
-"contact_phase2_restore_contacts_progress_message" = "";
-"contact_phase2_restore_contacts_success_title" = "";
-"contact_phase2_restore_contacts_success_message" = "";
-"contact_phase2_delete_contacts_confirm_title" = "";
-"contact_phase2_delete_contacts_confirm_message" = "";
-"contact_phase2_delete_all_contacts_success_message" = "";
-"contact_phase2_delete_backup_success_message" = "";
-"contact_phase2_contact_detail_navbar_title" = "";
-"contact_phase2_contact_detail_section_phone" = "";
-"contact_phase2_contact_detail_section_email" = "";
-"contact_phase2_contact_detail_section_address" = "";
-"contact_phase2_contact_detail_section_birthday" = "";
-"contact_phase2_contact_detail_section_notes" = "";
-"contact_phase2_contact_detail_no_info" = "";
+"contact_phase2_delete_duplicates_title" = "Fshiji të përsëriturat";
+"contact_phase2_delete_duplicates_top_label" = "U gjetën %d e regjistrimeve të  përsëritura në librin tënd të telefonit.";
+"contact_phase2_delete_duplicates_delete_all" = "Fshije te Gjitha";
+"contact_phase2_delete_duplicates_count" = "%d e regjistrimeve të përsëritura";
+"contact_phase2_delete_duplicates_confirm_title" = "Lë të fshihen regjistrime të përsëritura?";
+"contact_phase2_delete_duplicates_confirm_message" = "Regjistrimet e përsëritura  që janë  në librin tënd të telefonit do të fshihen. A doni të fshini këto regjistrime nga telefoni yt?";
+"contact_phase2_delete_duplicates_success_title" = "Regjistrimet e tua të përsëritura janë fshirë.";
+"contact_phase2_delete_duplicates_success_message" = "Regjistrimet e tua të përsëritura që janë në telefonin tënd janë fshirë me sukses.";
+"contact_phase2_delete_duplicates_back_up_title" = "Rezervoji kontaktet e tua";
+"contact_phase2_delete_duplicates_back_up_message" = "Rezervoje menjëherë librin tënd të azhurnuar të telefonit edhe në  lifebox!";
+"contact_phase2_delete_duplicates_back_up_button" = "Rezervo Tani";
+"contact_phase2_delete_duplicates_progress_title" = "Fshiji regjistrimet e tua të përsëritura që janë  në telefonin tënd";
+"contact_phase2_delete_duplicates_progress_message" = "Regjistrimet e përsëritura do të fshihen nga telefoni yt!";
+"contact_phase2_back_up_contacts_confirm_title" = "Lë të rezervohet libri yt i telefonit?";
+"contact_phase2_back_up_contacts_confirm_message" = "Tashmë ke një kopje rezervë. Dëshiron të shkruash mbi atë që ekziston?";
+"contact_phase2_contact_list_navbar_title" = "Lista e Personave";
+"contact_phase2_contact_list_title" = "Lista e Personave";
+"contact_phase2_contact_list_info" = "Në rezervimin tënd të librit të telefonit të datës  %2$@, janë rezervuar  %1$d e regjistrimeve.";
+"contact_phase2_contact_list_restore" = "Transfero në telefon";
+"contact_phase2_contact_list_delete_all" = "Fshije te Gjitha";
+"contact_phase2_restore_contacts_confirm_title" = "Transfero në telefon";
+"contact_phase2_restore_contacts_confirm_message" = "Regjistrimet që ke bërë rezervuar në lifebox do të transferohen në librin  tënd të telefonit. Deshiron të vazhdosh?";
+"contact_phase2_restore_contacts_progress_title" = "Transfero në telefon";
+"contact_phase2_restore_contacts_progress_message" = "Regjistrimet që ke bërë rezervuar në lifebox   po transferohen në librin tënd të telefonit.";
+"contact_phase2_restore_contacts_success_title" = "Transferimi në telefon u plotësua";
+"contact_phase2_restore_contacts_success_message" = "Regjistrimet që ke bërë rezervuar në mënyrë të sigurt në lifebox u transferuan me sukses edhe në telefonin tënd";
+"contact_phase2_delete_contacts_confirm_title" = "Dëshiron të fshish rezervimin tënd?";
+"contact_phase2_delete_contacts_confirm_message" = "Regjistrimet që ke bërë rezervuar do të fshihen nga lifebox. A jeni i sigurt që dëshiron  të vazhdosh?";
+"contact_phase2_delete_all_contacts_success_message" = "Të gjitha regjistrimet që ke bërë rezervuar  janë fshirë.";
+"contact_phase2_delete_backup_success_message" = "Rezervimi yt i fundit është fshirë.";
+"contact_phase2_contact_detail_navbar_title" = "Detajet e Personave";
+"contact_phase2_contact_detail_section_phone" = "Numri i telefonit";
+"contact_phase2_contact_detail_section_email" = "E-mail";
+"contact_phase2_contact_detail_section_address" = "Adresë";
+"contact_phase2_contact_detail_section_birthday" = "Ditëlindje";
+"contact_phase2_contact_detail_section_notes" = "Shënimet";
+"contact_phase2_contact_detail_no_info" = "Nuk ka asnjë regjistrim të rezervuar";
 "Off" = "i/e Mbyllur";
-"contact_phase2_backup_contacts_title" = "";
-"contact_phase2_backup_contacts_message" = "";
-"contact_phase2_backup_contacts_button" = "";
-"contact_phase2_small_card_backup_message" = "";
-"contact_phase2_small_card_backup_button" = "";
-"contact_phase2_small_card_duplicates_message" = "";
-"contact_phase2_small_card_duplicates_button" = "";
-"contact_phase2_big_card_backup_message" = "";
-"contact_phase2_big_card_contacts" = "";
-"contact_phase2_big_card_see_contacts_button" = "";
-"contact_phase2_big_card_autobackup_format" = "";
-"contact_phase2_backup_progress_title" = "";
-"contact_phase2_backup_progress_message" = "";
-"contact_phase2_cancel_analyze_button" = "";
-"contact_phase2_analyze_progress_message" = "";
-"contact_phase2_history_navbar_title" = "";
-"contact_phase2_history_header" = "";
-"contact_phase2_restore_button" = "";
-"contact_phase2_delete_button" = "";
-"contact_phase2_restore_popup_title" = "";
-"contact_phase2_delete_popup_title" = "";
-"contact_phase2_restore_popup_message" = "";
-"contact_phase2_delete_popup_message" = "";
-"contact_phase2_history_cell_title" = "";
-"contact_phase2_error_RemoteServer1101" = "";
-"contact_phase2_error_RemoteServer2000" = "";
-"contact_phase2_error_RemoteServer3000" = "";
-"contact_phase2_error_RemoteServer4000" = "";
-"contact_phase2_error_network" = "";
-"contact_phase2_delete_backup_success_card_title" = "";
-"contact_phase2_delete_backup_success_card_message" = "";
-"contact_phase2_contact_backup_success_navbar_title" = "";
-"contact_phase2_contact_backup_success_title" = "";
-"contact_phase2_contact_backup_success_message" = "";
-"contact_phase2_warning_popup_contact_permissions_title" = "";
-"contact_phase2_warning_popup_contact_permissions_message" = "";
-"contact_phase2_warning_popup_contact_permissions_storage_button" = "";
-"contact_phase2_warning_popup_contact_permissions_delete_button" = "";
-"contact_phase2_warning_popup_storage_limit_title" = "";
-"contact_phase2_warning_popup_storage_limit_message" = "";
-"contact_phase2_warning_popup_storage_limit_settings_button" = "";
-"contact_phase2_error_iternal" = "";
+"contact_phase2_backup_contacts_title" = "Rezervoji personat e tua";
+"contact_phase2_backup_contacts_message" = "Edhe libri yt i telefonit është gjithashtu i sigurt në lifebox! Mund të arrish tek personat e tua që janë në librin tënd të telefonit nga kudo që dëshiron dhe nga  çdo aparat që dëshiron.";
+"contact_phase2_backup_contacts_button" = "Rezervo Tani";
+"contact_phase2_small_card_backup_message" = "Data kur rezervimi u azhurnua për herë të fundit";
+"contact_phase2_small_card_backup_button" = "Shikoji rezervimet";
+"contact_phase2_small_card_duplicates_message" = "Mund të redaktosh librin tënd të telefonit duke  i  pastruar   regjistrimet e tua të përsëritura që janë  në telefonin tënd.";
+"contact_phase2_small_card_duplicates_button" = "Fshiji  regjistrimet e tua të përsëritura që janë  në telefonin tënd";
+"contact_phase2_big_card_backup_message" = "Ruaji   regjistrimet që janë  në librin tënd  të telefonit në lifebox  në mënyrë të sigurt!";
+"contact_phase2_big_card_contacts" = "Personat";
+"contact_phase2_big_card_see_contacts_button" = "Shikoji personat e tua";
+"contact_phase2_big_card_autobackup_format" = "Rezervim automatik: %@ ";
+"contact_phase2_backup_progress_title" = "Rezervohen personat e tua";
+"contact_phase2_backup_progress_message" = "Edhe libri yt i telefonit është gjithashtu i sigurt në lifebox! Mund të arrish tek personat e tua që janë në librin tënd të telefonit nga kudo që dëshiron dhe nga  çdo aparat që dëshiron.";
+"contact_phase2_cancel_analyze_button" = "Anulo";
+"contact_phase2_analyze_progress_message" = "Libri yt i telefonit po analizohet";
+"contact_phase2_history_navbar_title" = "Të rezervuarat";
+"contact_phase2_history_header" = "Rezervimet e tua të fundit";
+"contact_phase2_restore_button" = "Transfero në telefon";
+"contact_phase2_delete_button" = "Fshije";
+"contact_phase2_restore_popup_title" = "Transfero në telefon";
+"contact_phase2_delete_popup_title" = "Fshiji të rezervuarat";
+"contact_phase2_restore_popup_message" = "Regjistrimet që ke rezervuar në lifebox do të transferohen në librin tënd të telefonit. Deshiron të vazhdosh?";
+"contact_phase2_delete_popup_message" = "Rezervimet e tua do të fshihen nga lifebox. A jeni i sigurt që dëshiron  të vazhdosh?";
+"contact_phase2_history_cell_title" = "Personat";
+"contact_phase2_error_RemoteServer1101" = "Ka ndodhur një gabim i përkohshëm. Ju lutemi provojeni përsëri.";
+"contact_phase2_error_RemoteServer2000" = "Ka ndodhur një gabim i përkohshëm. Ju lutemi provojeni përsëri.";
+"contact_phase2_error_RemoteServer3000" = "Për shkak se ke tejkaluar kufirin maksimal të personave që mund të rezervohen, rezervimi nuk është mundur të plotësohet.";
+"contact_phase2_error_RemoteServer4000" = "Ka ndodhur një gabim i përkohshëm. Ju lutemi provojeni përsëri.";
+"contact_phase2_error_network" = "Duket se ka një problem në  lidhjen tënde të  internetit. Mund të provosh përsëri pasi të kontrollosh  lidhjen tënde.";
+"contact_phase2_delete_backup_success_card_title" = "Rezervimi automatik i librit të telefonit";
+"contact_phase2_delete_backup_success_card_message" = "Për të rezervuar automatikisht librin tënd të telefonit në intervale të rregullta, mund të aktivizosh rezervimin  tënd  automatik.";
+"contact_phase2_contact_backup_success_navbar_title" = "Rezervo";
+"contact_phase2_contact_backup_success_title" = "Rezervimi u plotësua";
+"contact_phase2_contact_backup_success_message" = "Pa ndonjë regjistrim të përsëritur, %d e Regjistrimeve të reja  të librit të telefonit është ngarkuar në mënyrë të  sigurt në lifebox-in tënd.";
+"contact_phase2_warning_popup_contact_permissions_title" = "Leja e qasjes tek personat";
+"contact_phase2_warning_popup_contact_permissions_message" = "Për të qenë e mundur të rezervosh librin tënd të telefonit në lifebox, duhet të lejosh që të qaset tek personat e lifebox-it nga  cilësimet e telefonit.";
+"contact_phase2_warning_popup_contact_permissions_storage_button" = "Cilësimet";
+"contact_phase2_warning_popup_contact_permissions_delete_button" = "Fshiji përmbajtjet e mia";
+"contact_phase2_warning_popup_storage_limit_title" = "Hapësira jote e ruajtjes së lifebox-it  është plotësisht e plotë";
+"contact_phase2_warning_popup_storage_limit_message" = "Nuk mund të vazhdosh në veprim sepse nuk ka mbetur vend në hapësirën tënde të ruajtjes. Mund të zmadhosh hapësirën e ruajtjes ose të lirosh  hapësirën e ruajtjes duke i fshirë  skedarët e tua.";
+"contact_phase2_warning_popup_storage_limit_settings_button" = "Zmadhoje hapësirën time të ruajtjes";
+"contact_phase2_error_iternal" = "Ka ndodhur një gabim i përkohshëm. Ju lutemi provojeni përsëri.";
 "download_document_error_popup" = "Vetëm mund të shkarkosh  fotografi, video ose albume.";
-"contact_phase2_history_cell_Contact_List" = "";
+"contact_phase2_history_cell_Contact_List" = "Lista e Personave";
 "settings_action_sheet_account_details" = "";
-"contact_phase2_error_backup_title" = "";
-"contact_phase2_error_restore_title" = "";
-"contact_phase2_error_delete_title" = "";
+"contact_phase2_error_backup_title" = "Rezervimi nuk është mundur të kryhet!";
+"contact_phase2_error_restore_title" = "Transferimi në telefon nuk është mundur të kryhet!";
+"contact_phase2_error_delete_title" = "Veprimi i fshirjes nuk është mundur të kryhet!";
 "gallery_filter_all" = "";
 "gallery_filter_synced" = "";
 "gallery_filter_unsynced" = "";
 "gallery_filter_action_sheet_all" = "";
 "gallery_filter_action_sheet_synced" = "";
 "gallery_filter_action_sheet_unsynced" = "";
-"contact_phase2_error_quota_restore" = "";
-"contact_phase2_error_quota_backup" = "";
-"contact_phase2_error_message" = "";
-"contact_phase2_result_backup_nav_bar_title" = "";
-"contact_phase2_result_restore_nav_bar_title" = "";
-"contact_phase2_result_delete_backup_nav_bar_title" = "";
-"contact_phase2_result_delete_duplicates_nav_bar_title" = "";
-"contact_phase2_result_delete_all_contacts_nav_bar_title" = "";
+"contact_phase2_error_quota_restore" = "Nuk mund të vazhdosh në veprim sepse nuk ka mbetur vend në hapësirën tënde të ruajtjes. Mund të zmadhosh hapësirën e ruajtjes  ose të lirosh  hapësirën e ruajtjes duke i fshirë  skedarët e tua.";
+"contact_phase2_error_quota_backup" = "Nuk mund të vazhdosh në veprim sepse nuk ka mbetur vend në hapësirën tënde të ruajtjes. Mund të zmadhosh hapësirën e ruajtjes  ose të lirosh  hapësirën e ruajtjes duke i fshirë  skedarët e tua.";
+"contact_phase2_error_message" = "Ka ndodhur një gabim i përkohshëm. Ju lutemi provojeni përsëri.";
+"contact_phase2_result_backup_nav_bar_title" = "Rezervo";
+"contact_phase2_result_restore_nav_bar_title" = "Transfero në telefon";
+"contact_phase2_result_delete_backup_nav_bar_title" = "Fshije rezervën";
+"contact_phase2_result_delete_duplicates_nav_bar_title" = "Fshiji të përsëriturat";
+"contact_phase2_result_delete_all_contacts_nav_bar_title" = "Fshiji  personat";
+"eula_title" = "";
